[gd_scene load_steps=9 format=3 uid="uid://bquh88mq3a01e"]

[ext_resource type="Script" uid="uid://36lan8p4yobd" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://qvh2c3cr0tnq" path="res://player/camera_controller.gd" id="2_g1dw6"]
[ext_resource type="Script" uid="uid://xjhut8lj777t" path="res://player/player_camera.gd" id="2_rkbax"]
[ext_resource type="Script" uid="uid://ctjx3k16l3rbx" path="res://player/player_controller.gd" id="4_qjkh3"]
[ext_resource type="Script" uid="uid://vnmft3qnkhg" path="res://player/player_input.gd" id="5_g6k8r"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kqu6x"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oul6g"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rkbax"]
properties/0/path = NodePath(".:_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:_velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:_direction")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:_strong_direction")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("CameraController/PlayerCamera/MeshInstance3D:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("CameraController/PlayerCamera/MeshInstance3D2:position")
properties/5/spawn = true
properties/5/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
top_level = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_oul6g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kqu6x")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45481, 0)
script = ExtResource("2_g1dw6")

[node name="PlayerCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0678487, 0)
fov = 80.0
script = ExtResource("2_rkbax")

[node name="InteractRayCast" type="RayCast3D" parent="CameraController/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0)
target_position = Vector3(0, 5, 0)
collision_mask = 15
collide_with_areas = true

[node name="CharacterRotationRoot" type="Node3D" parent="."]

[node name="CharacterSkin" type="MeshInstance3D" parent="CharacterRotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_oul6g")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_rkbax")

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("4_qjkh3")

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("5_g6k8r")
